
[package]
name = "bevy_wheel_menu"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.19", default-features = true }
serde = { version = "1", features = ["derive"] }
ron = "0.12"
bevy_tweening = "0.16"
leafwing-input-manager = "0.21"

[[example]]
name = "gamepad"
path = "examples/gamepad.rs"

[[example]]
name = "fps"
path = "examples/fps.rs"

[[example]]
name = "editor"
path = "examples/editor.rs"
