[package]
name = "bevy_quick_action_hud"
version = "0.2.0"
edition = "2021"
description = "A headless, gamepad-driven radial (wheel) menu library for Bevy 0.19"
license = "MIT"
repository = "https://github.com/dinosath/bevy_quick_action_hud"
keywords = ["bevy", "hud", "wheel-menu", "gamepad", "ui"]
categories = ["game-development", "graphics", "user-interfaces"]

[dependencies]
bevy = { version = "0.19", default-features = true, features = [
    "bevy_ui",
    "bevy_asset",
    "bevy_scene",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_text",
    "bevy_feathers",
] }
serde = { version = "1", features = ["derive"] }
ron = "0.12"
bevy_tweening = "0.16"
leafwing-input-manager = "0.21"
bevy_feathers = "0.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioBuffer",
    "AudioContextState",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlMetaElement",
    "Window",
    "PointerEvent",
    "TouchEvent",
    "Touch",
    "TouchList",
] }

[features]
default = ["hud", "editor"]
hud = []
editor = ["hud"]

[[example]]
name = "gamepad"
path = "examples/gamepad.rs"
required-features = []

[[example]]
name = "fps"
path = "examples/fps.rs"
required-features = ["editor"]

[[example]]
name = "editor"
path = "examples/editor.rs"
required-features = ["editor"]

[lib]
name = "bevy_quick_action_hud"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "z"
strip = true
